k3s/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mern-deployment
  labels:
    app: mern
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mern
  template:
    metadata:
      labels:
        app: mern
    spec:
      containers:
      - name: mern
        image: mern-frontend:v3
        imagePullPolicy: Never
        ports:
        - containerPort: 5173

---
apiVersion: v1
kind: Service
metadata:
  name: mern-service
spec:
  type: ClusterIP
  selector:
    app: mern
  ports:
    - protocol: TCP
      port: 5173
      targetPort: 5173
      nodePort: 30007
